--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,9 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+    <string>This app requires access to the camera for live streaming.</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>This app requires access to the microphone for audio during video streaming.</string>
 </dict>
 </plist>
