--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_aws_ivs: ^0.0.4
+  http_proxy: ^1.2.2
 
 dev_dependencies:
   flutter_test:
