--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,10 @@ dependencies:
   bhanzu_network:
     path: bhanzu_network
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  flutter_aws_ivs:
+    path: flutter_aws_ivs
+
   cupertino_icons: ^1.0.8
-  flutter_aws_ivs: ^0.0.4
   http_proxy: ^1.2.2
 
 dev_dependencies:
