--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id "com.android.application"
     id "kotlin-android"
-    id "kotlinx-serialization" apply(false)
+    id "kotlinx-serialization"
     // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
 }
@@ -12,6 +12,7 @@ android {
     ndkVersion = "27.0.12077973"
 
     buildFeatures {
+        viewBinding true
         compose true
     }
     composeOptions {
@@ -49,18 +50,27 @@ android {
 
 dependencies {
     implementation("com.amazonaws:ivs-broadcast:1.27.0:stages@aar")
-    implementation libs.androidx.recyclerview
-    implementation libs.androidx.ui.graphics.android
-    implementation libs.androidx.foundation.android
-    implementation libs.androidx.material3.android
-    implementation libs.androidx.constraintlayout
-    implementation libs.androidx.cardview
-    implementation libs.material
-    implementation libs.ivs.chat.messaging
-    implementation libs.androidx.activity.compose
+    implementation "androidx.core:core-ktx:$androidx_core_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+    implementation "androidx.recyclerview:recyclerview:1.3.2"
+    implementation "androidx.compose.ui:ui-graphics:1.6.1"
+    implementation "androidx.compose.foundation:foundation:1.6.1"
+    implementation "androidx.compose.material3:material3:1.2.0"
+    implementation "androidx.constraintlayout:constraintlayout:2.1.4"
+    implementation "androidx.cardview:cardview:1.0.0"
+    implementation "com.google.android.material:material:1.11.0"
+    implementation "com.amazonaws:ivs-chat-messaging:1.0.0"
+    implementation "androidx.activity:activity-compose:1.8.2"
     implementation "com.squareup.okhttp3:okhttp:5.0.0-alpha.7"
-    implementation(libs.kotlinx.serialization.json)
-    implementation libs.converter.gson
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+    implementation "com.google.android.gms:play-services-cronet:18.0.1"
 }
 
 flutter {
