--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   aws_common: 0.4.2+5
   aws_signature_v4: ^0.3.0
   crypto: ^3.0.3
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
